plugins {
    id 'java'
    id 'application'
    id 'info.solidsoft.pitest' version '1.6.0'
}

group 'com.l01gr05.berzerk'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceCompatibility = 1.8

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.mockito:mockito-core:3.7.7'

    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
    testImplementation 'org.codehaus.groovy:groovy-all:3.0.8'

    implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.1'
}

test {
    useJUnitPlatform()
}

application {
    mainClass.set('com.l01gr05.berzerk.Game')
}

pitest {
    junit5PluginVersion = '0.12'
}